# creatorjoy-rag

./: .gitignore  README.md  package-lock.json  package.json
apps/api/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt  test_maFuWOprKfU.m4a
apps/api/app/: config.py  db.py  embeddings.py  main.py  schemas.py
apps/api/app/agent/: classifier.py  graph.py  memory.py  prompt.py  retrieval.py  state.py  streaming.py
apps/api/app/routes/: chat.py  ingest.py  threads.py  videos.py
apps/api/app/services/: chunker.py  ingest.py  transcripts.py  youtube.py
apps/api/migrations/: 001_initial.sql  002_chat.sql
apps/api/scripts/: diagnose.py
apps/web/: .env.example  next.config.js  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: ChatMessage.tsx  ChatPanel.tsx  CitationToken.tsx  IngestForm.tsx  LoadingOverlay.tsx  VideoCard.tsx
apps/web/hooks/: useChat.ts
apps/web/lib/: api.ts  citations.ts  format.ts  sse.ts  types.ts
